# mcp-confidence

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
examples/: 01_basic_logprobs.py  02_openai_response.py  03_local_vllm_worker.py  README.md
examples/04_calibrate/: README.md  sample_audit.jsonl
src/mcp_confidence/: __init__.py  calibrate.py  cli.py  config.py  core.py  gate.py  mcp_server.py
src/mcp_confidence/adapters/: __init__.py  openai.py  pydantic_ai.py
tests/: conftest.py  test_adapters.py  test_calibrate.py  test_cli.py  test_config.py  test_core.py  test_gate.py  test_mcp_server.py
